# SNKappa

./: .gitignore  README.md  TODO_RERUN.md  TODO_REVIEW.md  conda-lock.yml  environment.yml  pyproject.toml
configs/: nullfield.yaml  sn1997ff.yaml  sn2025wny.yaml  sn2025wny_fbhybrid.yaml
des_pilot/: README.md
docs/: MICE_PLAN.md
output/delta_sigma/: delta_sigma_closure.json  delta_sigma_closure_naive.json  delta_sigma_closure_recal.json  mstar_vs_fastspecfit.json
output/des_full/: attenuation.json  des_all_kappa.csv  fit_summary.json  fit_summary_cap14.1.json  fit_summary_excise.json  fit_summary_mstar05.json  fit_summary_naive.json  fit_summary_nospecz.json  fit_summary_w1only.json  paper_stats.json  photoz_validation.json  table1_top.csv
output/mock_dc2/: mock_summary.json  mock_summary_naive.json  (+5 more)
paper/: des_lensing_apjl.tex  make_figs.py  stats.json
scripts/: attenuation_mc.py  build_mstar_recal.py  dc2_probe.py  delta_sigma_closure.py  des_full.py  des_pilot.py  fb_fit.py  fb_run_shards.sh  make_figs.py  mock_calibration.py  mock_dc2.sbatch  mock_extract_dc2.py  mock_phase0.sbatch  mstar_vs_fastspecfit.py  photoz_validation.py
snkappa/: __init__.py  __main__.py  batch.py  catalog.py  clusters.py  config.py  corrections.py  datalab.py  fbhybrid.py  fitting.py  halos.py  kappa.py  montecarlo.py  outputs.py  photoz.py  plots.py  randoms.py  stellar.py
tests/: conftest.py  test_catalog.py  test_clusters.py  test_delta_sigma.py  test_engine.py  test_fit_weighting.py  test_photoz.py  test_profiles.py  test_sigma_crit.py  test_stellar_recal.py
(+1 files in other folders)
