[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snkappa"
version = "0.1.0"
description = "External-convergence (kappa_ext) estimator for strongly lensed supernovae from public NOIRLab-served catalogs (DESI DR1 + Legacy Surveys DR10)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Peter Nugent", email = "penugent@lbl.gov" },
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "astropy>=6.0",
  "pyvo>=1.5",
  "colossus>=1.3",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "pandas>=2.1",
  "pyarrow>=14.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
snkappa = "snkappa.__main__:main"

[tool.setuptools.packages.find]
include = ["snkappa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
